Refactor development scripts in package.json to introduce separate commands for development modes. Update README.md with detailed startup options and server status handling. Enhance Vite proxy configuration to manage server availability errors and improve logging. Add ServerStatusBanner component to MainLayout for real-time server status display.

--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   "version": "2.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node start-dev.js",
+    "dev:vite": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "db": "node simple-server.cjs",
-    "dev:full": "concurrently \"npm run dev\" \"npm run db\"",
+    "dev:full": "concurrently \"npm run dev:vite\" \"npm run db\"",
     "clean": "rm -rf dist node_modules/.vite",
     "reset": "npm run clean && npm install",
     "test": "vitest",
