Enhance package.json with ngrok commands for easy setup and sharing. Update README.md to include ngrok usage instructions and benefits. Refine Vite configuration for improved ngrok integration and error handling. Modify AdminDashboardPage to streamline loading state management.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "preview": "vite preview",
     "db": "node simple-server.cjs",
     "dev:full": "concurrently \"npm run dev:vite\" \"npm run db\"",
+    "ngrok:setup": "node setup-ngrok-auto.js",
+    "ngrok": "node start-with-ngrok.js",
+    "ngrok:config": "ngrok config add-authtoken",
+    "ngrok:start": "ngrok start --all --config=ngrok.yml",
     "clean": "rm -rf dist node_modules/.vite",
     "reset": "npm run clean && npm install",
     "test": "vitest",
